--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
     margin: 0;
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
 .play-again {
     display: none;
 }
