--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
     background-color: #87c7ad;
     width: 100%;
     height: 10rem;
-    /* text-align: center; */
 } 
 
 #apple, #banana, #churro {
@@ -38,6 +37,12 @@ body {
 }
 
 /* results */
+.results {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 10rem;
+}
 .play-again {
     display: none;
 }
