--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 /* results */
-.results {
+.result-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
