Added uppercasing to first letter of choice in results.

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     height: 10rem;
 }
 .play-again {
