--- a/style.css
+++ b/style.css
@@ -64,6 +64,22 @@ body {
 /* buttons */
 .buttons {
     text-align: center;
+    margin-top: 4rem;
+}
+
+.choice {
+    text-decoration: none;
+    background: none;
+    border: none;
+}
+
+.banana, .apple {
+    margin-right: 4rem;
+}
+
+.banana, .apple, .churro {
+    height: 8rem;
+    width: 8rem;
 }
 
 /* score */
