--- a/style.css
+++ b/style.css
@@ -39,10 +39,10 @@ body {
 }
 
 .body {
-    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: beige;
 }
 
 /* results */
@@ -67,6 +67,21 @@ body {
     gap: 1rem;
     text-align: center;
 }
+
+.score > h3 {
+    background-color: #8a8986;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    height: 10rem;
+    width: 13rem;
+}
+
+.player-score, .computer-score {
+    font-size: 2rem;
+}
+
 
 /* buttons */
 .buttons {
