--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
     background-color: beige;
 }
 
-/* results */
+/* result-container */
 .result-container {
     display: flex;
     flex-direction: column;
@@ -61,32 +61,34 @@ body {
 
 }
 
+/* score */
 .score {
     display: flex;
     justify-content: center;
-    gap: 1rem;
+    gap: 6rem;
     text-align: center;
+    margin-top: 1rem;
 }
 
 .score > h3 {
-    background-color: #8a8986;
+    background-color: rgba(117, 117, 115, .5);
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 1rem;
-    height: 10rem;
-    width: 13rem;
+    height: 8rem;
+    width: 12rem;
 }
 
 .player-score, .computer-score {
     font-size: 2rem;
 }
 
-
 /* buttons */
 .buttons {
     text-align: center;
-    margin-top: 4rem;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
 }
 
 .choice {
@@ -95,7 +97,7 @@ body {
     border: none;
 }
 
-.banana, .apple {
+#banana-btn, #apple-btn {
     margin-right: 4rem;
 }
 
