Added the logic to track user's choices and update the html. Added some styling to tracker section.

--- a/style.css
+++ b/style.css
@@ -131,7 +131,16 @@ body {
     width: 8rem;
 }
 
-/* score */
+/* tracker */
+.tracker {
+    display: flex;
+    justify-content: space-between;
+}
+
+.player-tracker > img, .computer-tracker > img {
+    height: 1rem;
+    width: 1rem;
+}
 
 /* footer */
 .footer {
